--- a/templates/paragraphs/paragraph--newsletter-section--email-html.html.twig
+++ b/templates/paragraphs/paragraph--newsletter-section--email-html.html.twig
@@ -113,100 +113,102 @@
 				{% for key, item in paragraph.field_newsletter_section_select %}
 					{%  if key|first != '#' %}
 					<!--Teaser Article-->
-					<table role="presentation" width="100%" style="padding-bottom: 20px;">
-						<tbody>
-							<tr class="email-feature-art-row"style="border-bottom: solid rgba(128, 128, 128, 0.333);">
-								{# Image #}
-								<td valign="top" width="100px" height="100px" style="text-align: left; padding-right:10px; padding-left:10px">
-										{# Code to render selected article content (thumbnail) #}
-										{% if item.entity.field_newsletter_article_select.entity.field_ucb_article_thumbnail.entity.field_media_image.alt|render %}
-											<img
-											width="100px"
-											height="100px"
-											src="{{base_url}}{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_thumbnail.entity.field_media_image.entity.fileuri|image_style('focal_image_square') }}" alt="{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_thumbnail.entity.field_media_image.alt|render }}"/>
-			
-											{# Code to render selected article content (!thumbnail) #}
-										{% elseif item.entity.field_newsletter_article_select.entity.field_ucb_article_content.entity.field_article_media_selection.entity.field_media.entity.field_media_image.alt|render %}
-											<img
-											width="100px"
-											height="100px"
-											src="{{base_url}}{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_content.entity.field_article_media_selection.entity.field_media.entity.field_media_image.entity.fileuri|image_style('focal_image_square') }}" alt="{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_content.entity.field_article_media_selection.entity.field_media.entity.field_media_image.alt|render }}"/>
-			
-											{# Code to render user made content #}
-										{% elseif item.entity.field_newsletter_content_image.entity.field_media_image.alt|render %}
-											<img
-											width="100px"
-											height="100px"
-											 src="{{base_url}}{{ item.entity.field_newsletter_content_image.entity.field_media_image.entity.fileuri|image_style('focal_image_square') }}" alt="{{ item.entity.field_newsletter_content_image.entity.field_media_image.alt|render }}"/>
-										{% endif %}
-								</td>
-								{# Header, Summary, Cats #}
-								<td>
-									<table role="presentation">
-										<tbody>
-											{# Header #}
-											<tr>
-												{# Code to render selected article title/url #}
-												{% if item.entity.field_newsletter_article_select.entity.title.value|render %}
+					<center align="left">
+						<table role="presentation" width="100%" style="padding-bottom: 20px;">
+							<tbody>
+								<tr class="email-feature-art-row"style="border-bottom: solid rgba(128, 128, 128, 0.333);">
+									{# Image #}
+									<td valign="top" width="100px" height="100px" style="text-align: left; padding-right:10px; padding-left:10px">
+											{# Code to render selected article content (thumbnail) #}
+											{% if item.entity.field_newsletter_article_select.entity.field_ucb_article_thumbnail.entity.field_media_image.alt|render %}
+												<img
+												width="100px"
+												height="100px"
+												src="{{base_url}}{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_thumbnail.entity.field_media_image.entity.fileuri|image_style('focal_image_square') }}" alt="{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_thumbnail.entity.field_media_image.alt|render }}"/>
+				
+												{# Code to render selected article content (!thumbnail) #}
+											{% elseif item.entity.field_newsletter_article_select.entity.field_ucb_article_content.entity.field_article_media_selection.entity.field_media.entity.field_media_image.alt|render %}
+												<img
+												width="100px"
+												height="100px"
+												src="{{base_url}}{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_content.entity.field_article_media_selection.entity.field_media.entity.field_media_image.entity.fileuri|image_style('focal_image_square') }}" alt="{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_content.entity.field_article_media_selection.entity.field_media.entity.field_media_image.alt|render }}"/>
+				
+												{# Code to render user made content #}
+											{% elseif item.entity.field_newsletter_content_image.entity.field_media_image.alt|render %}
+												<img
+												width="100px"
+												height="100px"
+												 src="{{base_url}}{{ item.entity.field_newsletter_content_image.entity.field_media_image.entity.fileuri|image_style('focal_image_square') }}" alt="{{ item.entity.field_newsletter_content_image.entity.field_media_image.alt|render }}"/>
+											{% endif %}
+									</td>
+									{# Header, Summary, Cats #}
+									<td>
+										<table role="presentation">
+											<tbody>
+												{# Header #}
+												<tr>
+													{# Code to render selected article title/url #}
+													{% if item.entity.field_newsletter_article_select.entity.title.value|render %}
+													<td>
+														<h3>
+														<a href="{{base_url}}{{ path('entity.node.canonical', {'node': item.entity.field_newsletter_article_select.target_id}) }}">
+															{{ item.entity.field_newsletter_article_select.entity.title.value|render|striptags|trim }}
+														</a>
+													</h3>
+													</td>
+	
+													{# Code to render user made content (title) #}
+												{% elseif item.entity.field_newsletter_content_title.value|render %}
 												<td>
 													<h3>
-													<a href="{{base_url}}{{ path('entity.node.canonical', {'node': item.entity.field_newsletter_article_select.target_id}) }}">
-														{{ item.entity.field_newsletter_article_select.entity.title.value|render|striptags|trim }}
-													</a>
-												</h3>
+														{{ item.entity.field_newsletter_content_title|view }}
+													</h3>
 												</td>
-
-												{# Code to render user made content (title) #}
-											{% elseif item.entity.field_newsletter_content_title.value|render %}
-											<td>
-												<h3>
-													{{ item.entity.field_newsletter_content_title|view }}
-												</h3>
-											</td>
-											{% endif %}
-											</tr>											
-											{# Categories #}
-							{# Code to render selected article content (categories) #}
-							{% if item.entity.field_newsletter_article_select.entity.field_ucb_article_categories is not empty %}
-							<tr>
-								<td class="article-teaser-meta tags" style="padding-bottom: 10px;">
-														{# TO DO - Fix categories #}
-									{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_categories|view }}
-								</td>
-							</tr>
-							{# Code to render user made content (categories) #}
-						{% elseif item.entity.field_news_content_categories is not empty %}
-						<tr>
-							<td class="tags" style="padding-bottom: 10px;">
-													{# TO DO - Fix categories #}
-								{{ item.entity.field_news_content_categories|view }}
-							</td>
-						</tr>
-						{% endif %}
-							{# Code to render selected article content (summary) #}
-						{% if item.entity.field_newsletter_article_select.entity.field_ucb_article_summary.value|render %}
-													<tr>
-														<td>{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_summary|view }}</td>
-													</tr>
-					
-													{# Code to render selected article content (article text) #}
-												{% elseif item.entity.field_newsletter_article_select.entity.field_ucb_article_content.entity.field_article_text.value|render %}
-													<tr>
-														<td>{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_content.entity.field_article_text|view }}</td>
-													</tr>
-					
-													{# Code to render user made content (content text) #}
-												{% elseif item.entity.field_newsletter_content_text.value|render %}
-													<tr>
-														<td>{{ item.entity.field_newsletter_content_text|view }}</td>
-													</tr>
 												{% endif %}
-										</tbody>
-									</table>
+												</tr>											
+												{# Categories #}
+								{# Code to render selected article content (categories) #}
+								{% if item.entity.field_newsletter_article_select.entity.field_ucb_article_categories is not empty %}
+								<tr>
+									<td class="article-teaser-meta tags" style="padding-bottom: 10px;">
+															{# TO DO - Fix categories #}
+										{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_categories|view }}
+									</td>
+								</tr>
+								{# Code to render user made content (categories) #}
+							{% elseif item.entity.field_news_content_categories is not empty %}
+							<tr>
+								<td class="tags" style="padding-bottom: 10px;">
+														{# TO DO - Fix categories #}
+									{{ item.entity.field_news_content_categories|view }}
 								</td>
 							</tr>
-						</tbody>
-					</table>
+							{% endif %}
+								{# Code to render selected article content (summary) #}
+							{% if item.entity.field_newsletter_article_select.entity.field_ucb_article_summary.value|render %}
+														<tr>
+															<td>{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_summary|view }}</td>
+														</tr>
+						
+														{# Code to render selected article content (article text) #}
+													{% elseif item.entity.field_newsletter_article_select.entity.field_ucb_article_content.entity.field_article_text.value|render %}
+														<tr>
+															<td>{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_content.entity.field_article_text|view }}</td>
+														</tr>
+						
+														{# Code to render user made content (content text) #}
+													{% elseif item.entity.field_newsletter_content_text.value|render %}
+														<tr>
+															<td>{{ item.entity.field_newsletter_content_text|view }}</td>
+														</tr>
+													{% endif %}
+											</tbody>
+										</table>
+									</td>
+								</tr>
+							</tbody>
+						</table>
+					</center>
 				{% endif %}
 			{% endfor %}
 		{% endif %}
