Centers spinning loader on block, resolves case for too many articles and addtl calls available, uses focal image wide block, removes unneeded body and date code from previous version

--- a/css/block/ucb-article-slider-block.css
+++ b/css/block/ucb-article-slider-block.css
@@ -114,3 +114,9 @@
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   color: #cfb87c;
 }
+
+article-slider-block .ucb-loading-data{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
